# code-voyagers

./: .gitignore  ARCHITECTURE.md  DEMO.md  Dockerfile.backend  EXPLANATION.md  README.md  docker-compose.yml  output.json  pyproject.toml  requirements.txt
Timer/: timer_v2.py
dev/: ADK_Learning_tools.ipynb  ADK_MAS.ipynb
frontend/: Dockerfile  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: RecipeSearch.tsx
frontend/src/pages/: Index.tsx
src/: TEST.sh  ingredient_vision_agent.py  main.py
src/agents/: __init__.py  ingredient_vision_agent.py  sous_chef_agent.py  suggester_agent.py  vision.py
src/backend/: main.py
src/backend/agents/: ingredient_vision_agent.py  sous_chef_agent.py  suggester_agent.py
src/backend/tools/: search_tool.py  timer_tool.py
src/frontend/src/: App.js
src/service/: recipe-memory-service.py
src/sous_chef_agent/: sous_chef_agent.py
src/src/: ingredient_vision_agent.py
src/tools/: search_tool.py  timer_tool.py
src/voice_agent/: agent.py  sous_chef_agent.py
